--- a/blog_app/app/views/blogposts/_form.html.erb
+++ b/blog_app/app/views/blogposts/_form.html.erb
@@ -1,25 +1,13 @@
-<%= form_for(@blogpost) do |f| %>
-  <% if @blogpost.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@blogpost.errors.count, "error") %> prohibited this blogpost from being saved:</h2>
-
-      <ul>
-      <% @blogpost.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+<%= simple_form_for @post do |f| %>
+  <div class="form-group">
+    <%= f.input :title, class: "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+
+  <div class="form-group">
+    <%= f.input :body, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'FULL'}}, class: "form-control" %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="form-group">
+    <%= f.button :submit %>
   </div>
 <% end %>
