bootstrap errors solved

--- a/blog_app/app/views/blogposts/edit.html.erb
+++ b/blog_app/app/views/blogposts/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing blogpost</h1>
 
-<%= render 'form' %>
+<%= render 'blogposts/form' %>
 
 <%= link_to 'Show', @blogpost %> |
 <%= link_to 'Back', blogposts_path %>
