--- a/blog_app/app/views/layouts/application.html.erb
+++ b/blog_app/app/views/layouts/application.html.erb
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>BlogApp</title>
-  <!-- <%= stylesheet_link_tag    "application", "data-turbolinks-track" => 'reload' %>
+  <%= stylesheet_link_tag    "application", "data-turbolinks-track" => 'reload' %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => 'reload' %>
-  <%= csrf_meta_tags %> -->
+  <%= csrf_meta_tags %>
 </head>
 <body>
   <header class="navbar navbar-fixed-top navbar-inverse">
@@ -13,7 +13,7 @@
       <nav>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Home",   '#' %></li>
-          <li><%= link_to "Log in", '#' %></li>
+          <li><%= link_to "Log in", 'sessions#new' %></li>
         </ul>
       </nav>
     </div>
